[package]
name = "lyna"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"

[dependencies]
mlua = { version = "0.10.5", features = ["lua54", "vendored", "serialize"] }
addin1c = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "1.0"
anyhow = "1.0"